--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/three": "^0.148.0",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
