--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "serve": "webpack serve"
+    "build": "webpack -d false --config webpack.production.config.js",
+    "serve": "webpack serve",
+    "serve-production": "webpack serve --config webpack.production.config.js"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
@@ -25,8 +26,10 @@
     "style-loader": "^3.3.1",
     "svgo": "^3.0.2",
     "tailwindcss": "^3.2.4",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
